--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mqtt": "^5.14.1",
     "peerjs": "^1.5.5",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.17",
