--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,11 @@
     "framework": "vite",
     "cleanUrls": true,
     "trailingSlash": false,
+    "functions": {
+        "api/**/*.ts": {
+            "runtime": "@vercel/edge"
+        }
+    },
     "headers": [
         {
             "source": "/(.*)",
@@ -52,7 +57,11 @@
     ],
     "rewrites": [
         {
-            "source": "/((?!assets/).*)",
+            "source": "/api/:path*",
+            "destination": "/api/:path*"
+        },
+        {
+            "source": "/((?!api|assets/).*)",
             "destination": "/index.html"
         }
     ]
